<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="6dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingVertical="10dp"
		android:paddingStart="8dp"
		android:paddingEnd="4dp">

		<ImageView
			android:id="@+id/addon_drag"
			android:layout_width="40dp"
			android:layout_height="48dp"
			android:contentDescription="@string/addons_reorder"
			android:scaleType="center"
			android:src="@drawable/ic_drag" />

		<ImageView
			android:id="@+id/addon_logo"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_marginStart="4dp"
			android:importantForAccessibility="no"
			android:scaleType="centerInside" />

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="12dp"
			android:layout_weight="1"
			android:orientation="vertical">

			<TextView
				android:id="@+id/addon_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:maxLines="1"
				android:textAppearance="?attr/textAppearanceTitleSmall" />

			<TextView
				android:id="@+id/addon_detail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:maxLines="2"
				android:textAppearance="@style/TextAppearance.Niixfliix.Caption" />

			<TextView
				android:id="@+id/addon_url"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ellipsize="middle"
				android:maxLines="1"
				android:textAppearance="@style/TextAppearance.Niixfliix.Caption" />

			<TextView
				android:id="@+id/addon_down"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/addons_not_answering"
				android:textAppearance="?attr/textAppearanceLabelSmall"
				android:textColor="?attr/colorError"
				android:visibility="gone" />
		</LinearLayout>

		<ImageButton
			android:id="@+id/addon_more"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:contentDescription="@string/action_more"
			android:src="@drawable/ic_more" />
	</LinearLayout>
</com.google.android.material.card.MaterialCardView>
